# luganda-mt-synthetic

./: .env.example  .gitignore  Dockerfile  Eng-Lug_Dataset_combined_deduped_shuffled.xlsx  README.md  docker-compose.yml  evaluation.json  generate_synthetic_luganda.py  pyproject.toml  requirements.txt  run_overnight.sh  test.json  validation.json
Dataset/: README_Dataset.md  ai-usage-log  evaluation.json  test.json  validation.json
ai-usage-logs/: claude_session_log.md
results/: aya_results.jsonl  gemma_results.jsonl  llama3_results.jsonl  mistral_results.jsonl  smoke.jsonl
results/lora_overnight/: lora_1x_eval_results.jsonl  lora_5x_eval_results.jsonl
results/lora_overnight/lora_1x/: adapter_config.json
results/lora_overnight/lora_5x/: README.md
results/lora_smoke/: lora_1x_eval_results.jsonl  lora_5x_eval_results.jsonl
results/lora_smoke/lora_1x/: adapter_config.json
scripts/: download_models.py  evaluate.py  finetune.py
